# tooling_demo

./: .bazelrc  .clang-format  .clang-tidy  BUILD.bazel  MODULE.bazel
.github/workflows/: check_style.yml  clang-format.yml  clang-tidy.yml  coverage.yml  sanitizers.yml  test.yml  valgrind.yml
include/compute/: add_two.hpp
test/: BUILD.bazel  test_add_two.cpp  test_add_two_2.cpp
