cc_library(
    name="compute",
    hdrs=["include/compute/add_two.hpp"],
    visibility=["//visibility:public"],
    strip_include_prefix="include/",
    include_prefix="",
    deps=[
        "@boost.rational//:boost.rational",
    ]
)

# Use .clang-tidy when "clang_tidy_config" is requested.
filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//visibility:public"],
)