module(
    name = "tooling_demo",
    version = "0.1.0",
    # use compatibility_level to indicate breaking compatibility
)

# This demo uses Boost.Rational.
bazel_dep(name = "boost.rational", version = "1.83.0.bzl.1")

# Test frameworks that can be used:
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "boost.test", version = "1.83.0.bzl.4")
