module(
    name = "tooling_demo",
    version = "0.1.0",
    # use compatibility_level to indicate breaking compatibility
)

# This demo uses Boost.Rational.
bazel_dep(name = "boost.rational", version = "1.83.0.bzl.1")

# Test frameworks that can be used:
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "boost.test", version = "1.83.0.bzl.4")

# Run clang-tidy, with `bazel ... --config clang-tidy`.
# clang-tidy requires access to included files, so it is most useful to treat
# it, effectively, as a compiler.

# (2024) The "bazel_clang_tidy" repository does not seem to be very actively
# maintained, but it does do the job.
# Except that there does not seem to be a bzlmod registry that has it.
# So give the Git source explicitly:
bazel_dep(name = "bazel_clang_tidy", version = "")
git_override(
    module_name="bazel_clang_tidy",
    remote="https://github.com/erenon/bazel_clang_tidy.git",
    commit='bff5c59c843221b05ef0e37cef089ecc9d24e7da')